Добавил API точки для редактирования и удаления товара
