# Modules/Api/Http/Controllers/ItemController.php
@@ -7,6 +7,7 @@ use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\Auth;
 use Modules\Item\Dto\SaveItemDto;
 use Modules\Item\Requests\StoreItemRequest;
+use Modules\Item\Requests\UpdateItemRequest;
 use Modules\Item\Services\ItemService;
 
 class ItemController extends Controller
@@ -42,16 +43,53 @@ class ItemController extends Controller
      *     @OA\Response(
      *         response="200",
      *         description="Все хорошо",
-     *     ),
-     *     @OA\Response(
-     *         response="500",
-     *         description="Ошибка на стороне сервера"
+     *         @OA\JsonContent()
      *     )
      * )
      */
-    public function get(): JsonResponse
+    public function all(): JsonResponse
     {
         return response()->success(null, $this->service->getAll());
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/items/{id}",
+     *     operationId="item",
+     *     security={{"bearerAuth":{}}},
+     *     summary="Получение указанного товара",
+     *     tags={"Items"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="id товара",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Все хорошо",
+     *         @OA\JsonContent()
+     *     )
+     * )
+     */
+
+    /**
+     * @param $id
+     * @return JsonResponse
+     * @throws \Exception
+     */
+    public function show($id): JsonResponse
+    {
+        $item = $this->service->getTryById($id);
+
+        return response()->success(null,
+            [
+                'item' => $item
+            ]
+        );
     }
 
     /**
@@ -103,7 +141,12 @@ class ItemController extends Controller
      *     )
      * )
      */
-    public function add(StoreItemRequest $request)
+
+    /**
+     * @param StoreItemRequest $request
+     * @return JsonResponse
+     */
+    public function add(StoreItemRequest $request): JsonResponse
     {
         $dto = SaveItemDto::populateByArray($request->toArray());
         $user = Auth::user();
@@ -114,5 +157,123 @@ class ItemController extends Controller
             [
                 'item' => $item->toArray()
             ]);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/items/update/{id}",
+     *     operationId="itemsUpdate",
+     *     security={{"bearerAuth":{}}},
+     *     summary="Изменение товара (доступ только у создателя)",
+     *     tags={"Items"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="id товара",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *         )
+     *     ),
+     *    	@OA\RequestBody(
+     *          description="Указывать нужно только те поля что были изменены,
+     *                       а те что не тронуты не отсылай или пиши NULL",
+     *          required=false,
+     *          @OA\MediaType(
+     *              mediaType="multipart/form-data",
+     *              @OA\Schema(
+     *                  @OA\Property(
+     *                      property="title",
+     *                      description="Наименование",
+     *                      type="string",
+     *                   ),
+     *                  @OA\Property(
+     *                      property="cat_id",
+     *                      description="Id категории",
+     *                      type="integer",
+     *                   ),
+     *                  @OA\Property(
+     *                      property="desc",
+     *                      description="Описание",
+     *                      type="string"
+     *                   ),
+     *                  @OA\Property(
+     *                      property="price",
+     *                      description="Цена",
+     *                      type="string",
+     *                   ),
+     *                  @OA\Property(
+     *                      property="photo",
+     *                      description="Фотография",
+     *                      type="file",
+     *                      @OA\Items(type="string", format="binary")
+     *                   ),
+     *               ),
+     *           ),
+     *       ),
+     *
+     *     @OA\Response(
+     *         response="200",
+     *         description="Товар изменен",
+     *         @OA\JsonContent()
+     *     )
+     * )
+     */
+
+    /**
+     * @param $id
+     * @param UpdateItemRequest $request
+     * @return JsonResponse
+     * @throws \Exception
+     */
+    public function update($id, UpdateItemRequest $request): JsonResponse
+    {
+        $item = $this->service->getTryById($id);
+        $dto = SaveItemDto::populateByArray($request->toArray());
+        $user = Auth::user();
+
+        $this->service->update($item, $dto, $user);
+
+        return response()->success('Item was updated', [
+            'item' => $item
+        ]);
+    }
+
+    /**
+     * @OA\Delete (
+     *     path="/items/drop/{id}",
+     *     operationId="itemsDrop",
+     *     security={{"bearerAuth":{}}},
+     *     summary="Удаление товара (доступ только у создателя)",
+     *     tags={"Items"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="id товара",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Все хорошо",
+     *         @OA\JsonContent()
+     *     )
+     * )
+     */
+
+    /**
+     * @param $id
+     * @return mixed
+     * @throws \Exception
+     */
+    public function drop($id): JsonResponse
+    {
+        $item = $this->service->getTryById($id);
+        $user = Auth::user();
+        $this->service->drop($item, $user);
+
+        return response()->success('Item was deleted', null);
     }
 }
